# kr-ai-hackathon-art

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  architecture.md  concept.md  implementation.md  prompts.md  pyproject.toml  requirements.txt
src/: audio_analyzer.py  audio_bridge.py  config.py  feedback_loop.py  gemini_client.py  ghost_replay.py  iml_manager.py  lyria_client.py  main.py  narrative_manager.py  prompts.py  shared_state.py  tolvera_engine.py
tests/: test_audio_analyzer.py  test_config.py  test_ghost_replay.py  test_narrative_manager.py  test_shared_state.py
